--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="icon.png" />
     <link rel="icon" href="favicon.ico" />
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/Untitled-1.css" />
 </head>
 
 <body>
