--- a/collection/test.html
+++ b/collection/test.html
@@ -96,7 +96,7 @@
     <!-- Zone de texte modulable pour expliquer ton projet -->
     <div id="explanation-box" class="explanation-box" contenteditable="true">
       <h3>Déplacez les NFT dans la zone</h3>
-      <p>Dessinez autour des images afin de créer votre propore œuvre.</p>
+      <p>Dessinez autour des images afin de créer votre propre œuvre.</p>
     </div>
 
     <script>
